# viso_imu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config_raspi_ununtu.sh  package.xml  virtual_display.md
.github/workflows/: c-cpp.yml
config/: imx219.yaml  imx219.yml  intrinsics.yaml
config/stereo_calib/circlegrid/: left.yaml  ost.txt  right.yaml
config/stereo_calib/pinhole/: left.yaml  ost.txt  right.yaml
include/: ICM20948.h  camera_params.h  cloud_computer.hpp  detector.hpp  image.h  imu.h  matcher.hpp  resolution.h  transform_computer.hpp  usb_stereo.h
launch/: image_proc.launch
scripts/: imu_bag_rotate.py  stereo_usb_driver.py  usb_cam
src/: ICM20948.cpp  cloud_computer.cpp  detector.cpp  gstHdmi.cpp  gstMedia.cpp  imu.cpp  main_inception.cpp  main_unitary_test.cpp  main_usb_cam.cpp  matcher.cpp  simple_camera.cpp  test_usb_cam.cpp  transform_computer.cpp  usb_stereo.cpp
test/: 2018-08-01-11-13-14.txt  2018-08-01-11-13-14.yml  test_stereo_driver.py
